# dcu-middleware

./: .envrc  .flake8  .gitignore  Dockerfile  Makefile  README.md  celeryconfig.py  docker-compose.yml  health.sh  logging.yaml  logging.yml  private_pips.txt  pyproject.toml  requirements.txt  run.py  run.sh  settings.py  setup.py  tartufo.toml  test_requirements.txt
.github/workflows/: ci.yaml  ci.yml  cicd-role-cred-sync.yml
dcumiddleware/: MalwareStrategy.py  PhishstoryDB.py  PhishstoryMongo.py  __init__.py  apihelper.py  celeryconfig.py  cmapservicehelper.py  dcuapi_functions.py  incident.py  malwarestrategy.py  metrics.py  mongohelper.py  netabusestrategy.py  phishingstrategy.py  phishstorydb .py  phishstorydb.py  phishstorymongo.py  reviews.py  routinghelper.py  run.py  settings.py  tickethelper.py  urihelper.py  viphelper.py
dcumiddleware/interfaces/: brandroutinghelper.py  phishstorydb.py  review.py  strategy.py
dcumiddleware/utilities/: apihelper.py  branddetectionhelper.py  cmapservicehelper.py  cmapv2helper.py  kelvinhelper.py  routinghelper.py  shopperhelper.py
k8s/base/: deployment.yaml
k8s/dev/: deployment.yaml  kustomization.yml  middleware-redis.deploymment.yaml  middleware-redis.service.yml  middleware.deployment.yml  selenium-server.deployment.yaml  selenium-server.service.yml
k8s/ote/: deployment.yaml  kustomization.yml  middleware-redis.deploymment.yaml  middleware-redis.service.yml  middleware.deployment.yml  selenium-server.deployment.yaml  selenium-server.service.yml
k8s/prod/: deployment.yaml  kustomization.yml  middleware-redis.deploymment.yaml  middleware-redis.service.yml  middleware.deployment.yml
k8s/test/: deployment.yaml  kustomization.yml
tests/: branddetectionhelper_tests.py  cmapservicehelper_tests.py  dcuapi_function_tests.py  incident_tests.py  malwarestrategy_tests.py  mongohelper_tests.py  netabusestrategy_tests.py  phishingstrategy_tests.py  phishstorydb_tests.py  phishstorymongo_tests.py  review_tests.py  routinghelper_tests.py  run_tests.py  settings_tests.py  shopperhelper_tests.py  test_settings.py  tickethelper_tests.py  urihelper_tests.py
