[tool.poetry]
name = "dcumiddleware"
version = "1.0.0"
description = "middleware for processing API requests"
authors = ["DCU Engineering <dcueng@godaddy.com>"]

[[tool.poetry.source]]
name = "gddy-artifactory"
url = "https://artifactory.secureserver.net/artifactory/api/pypi/python-virt/simple"

[tool.poetry.dependencies]
python = "3.7.10"
billiard = "3.6.4.0"
certifi = "2020.12.5"
chardet = "4.0.0"
click = "8.0.3"
click-didyoumean = "0.0.3"
click-plugins = "1.1.1"
click-repl = "0.2.0"
dcdatabase = "1.3"
func-timeout = "4.3.5"
idna = "2.10"
importlib-metadata = "4.0.1"
kombu = "5.2.3"
prompt-toolkit = "3.0.18"
pymongo = "3.11.4"
python-dateutil = "2.8.1"
PyYAML = "5.4.1"
requests = "2.25.1"
six = "1.15.0"
typing-extensions = "3.10.0.0"
urllib3 = "1.26.5"
vine = "5.0.0"
wcwidth = "0.2.5"
zipp = "3.4.1"
csetutils = ">=0.1.8"

[tool.poetry.dev-dependencies]
coverage = "5.5"
flake8 = "4.0.0"
importlib-metadata = "4.0.1"
isort = "5.8.0"
mccabe = "0.6.1"
mock = "4.0.3"
mongomock = "3.22.1"
pycodestyle = "2.8.0"
pyflakes = "2.4.0"
sentinels = "1.0.0"
six = "1.15.0"
typing-extensions = "3.10.0.0"
zipp = "3.4.1"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
